--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,6 +12,7 @@
     --btn-bg-color-light: #FFFAF4;
     --input-bg-color: #FCFCFC;
     --placeholder-color: #C0C0C0;
+    --line-color: #EDEDED;
 }
 
 /* Общие стили */
@@ -34,11 +35,11 @@ body {
     background-color: var(--bg-color-white);
     /*max-width: 1380px;*/
     margin: 0 auto;
-    padding: 44px;
 }
 
 .container {
     margin: 0 auto;
+    padding: 44px;
 }
 
 /* Шапка */
@@ -47,6 +48,7 @@ body {
     justify-content: space-between;
     align-items: center;
     gap: 36px;
+    border-bottom: 1px solid var(--line-color);
 }
 
 .logo a {
